2014-09-08  Chris Moller  <moller@mollerware.com>

	* aplio.c (apl_read_out): Removed some commented-out diagnostic code.

2014-09-07  Chris Moller  <moller@mollerware.com>

	* edit.c (build_edit_menubar): Renamed "Save File" to "Export File".

	* aplio.c (send_apl): Added convenience wrapper to send().  (Also
	affected fcns in edit.c and menu.c.)

2014-08-31  Chris Moller  <moller@mollerware.com>

	* menu.c (open_object_cb): Put open list inside a scrolled
	window.  Also sorted the list.

2014-08-30  Chris Moller  <moller@mollerware.com>

	* apl.c (make_env): Fixed a g_malloc mug.
	* edit.c (clone_object): Added clone.
	(build_edit_menubar): Added save to file.
	* edit.c (edit_object): Cleaned up a lot of stuff in shared buffer
	stuff. 

2014-08-29  Chris Moller  <moller@mollerware.com>

	* edit.c: Added multi-window stuff.

	* menu.c (open_object_cb): Temporarily remove variable edit.

2014-08-28  Chris Moller  <moller@mollerware.com>

	* menu.c (file_button_press_cb): Add double-click select/accept.
	* aplwrap.c (main): Add main window title.
	* edit.c (edit_save_cb): New capability: nascent editor
	* edit.c (edit_object): Add edit window title.
	(edit_variable_cb): Add edit-variable framework.

2014-08-25  Chris Moller  <moller@mollerware.com>

	* menu.c (save_log_fer_real): Add "Save Log" capability.

	* apl.c (apl_spawn): Made apl_argv dynamic.

2014-08-17  Chris Moller  <moller@mollerware.com>

	* aplwrap.c (key_press_event): Make ctrl-Windows equivalent to
	ctrl-Break in interrupting APL.

2014-08-16  Chris Moller  <moller@mollerware.com>

	* aplwrap.c (main): Fixed option parsing.
	(key_press_event): Make the keypad Enter key synonymous with the
	main Ennter key.
	(apl_read_out and apl_read_out): Fixes to the read loops.
	(key_press_event): Fixes for spurious newlines.
	(main): More input fixes by David Lamkins.

2014-08-15  Chris Moller  <moller@mollerware.com>

	* aplwrap.c: Might as well start keeping track of the changes,